    - Modified qpp::load() and qpp::save() ["input_output.hpp"] to accept
      streams instead of file names, and load/save in text format (instead of
      binary format), while preserving double precision
    - Renamed qpp::saveMATLAB() to qpp::save_MATLAB() and qpp::loadMATLAB() to
      qpp::load_MATLAB() ["MATLAB/matlab.hpp"]

Version 2.5 - 28 November 2020
    - Significant improvements in qpp::QEngine::execute() for multiple runs
    - Changed all header extensions from ".h" to ".hpp" (except for "qpp.h")
    - Automatic OpenMP detection by CMake
    - CMake minimum required version bumped to 3.9 (3.12 for macOS) for
      automatic OpenMP detection
    - OpenQASM bugfixes
    - Renamed 'master' branch to 'main'

Version 2.4 - 13 May 2020
    - Enabled documentation searching by setting SEARCHENGINE = ON in
      "Doxyfile"
    - Implemented the following static member functions qpp::QCircuit::
          - is_CTRL()     - gate step is a controlled gate or not
          - is_cCTRL()    - gate step is a classically-controlled gate or not
          - is_non_CTRL() - gate step is a non-controlled gate or not
    - Changed qpp::QCircuit::
          - is_clean()  -> is_clean_qudit()
          - get_clean() -> get_clean_qudits()
    - Split qpp::QCircuit::remove_clean() into qpp::QCircuit::
          - remove_clean_qudit()  - removes single clean qudit from quantum
                                    circuit description
          - remove_clean_qudits() - removes list of clean qudits from quantum
                                    circuit description
    - Implemented qpp::QCircuit::
          - is_clean_dit()      - true if the classical dit is clean (not used),
                                  false otherwise
          - get_clean_dits()    - list of clean classical dits
          - remove_clean_dit()  - removes single clean classical dit from
                                  quantum circuit description