@@ -10,6 +10,7 @@ Pre-release
       binary format), while preserving double precision
     - Renamed qpp::saveMATLAB() to qpp::save_MATLAB() and qpp::loadMATLAB() to
       qpp::load_MATLAB() ["MATLAB/matlab.hpp"]
+    - Renamed [c]CTRL_custom() to [c]CTRL_joint() ["classes/circuits/circuits.hpp"]
 
 Version 2.5 - 28 November 2020
     - Significant improvements in qpp::QEngine::execute() for multiple runs
